--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugin-manager/zplug"]
-	path = plugin-manager/zplug
-	url = https://github.com/zplug/zplug.git
+[submodule "plugin-manager/zinit"]
+	path = plugin-manager/zinit
+	url = https://github.com/zdharma/zinit.git
